# socks-relay-manager

./: .gitignore  DEPLOYMENT_READY.md  DEPLOY_v1.2.0.md  INSTALL_UPDATE.txt  README.md  SERVER_FIX.md  UPDATE_README.md  V1.2.0_HOTFIX.md  V1.2.0_INSTALL.md  V1.2.0_PACKAGE_INFO.txt  V1.2.1_INSTALL.md  config.yaml.example  proxy-relay.service  pyproject.toml  requirements.txt
docs/: AUTHENTICATION.md  DEPLOYMENT.md  DEPLOYMENT_READY.md  DEPLOYMENT_STATUS.md  DEPLOYMENT_SUMMARY.md  DEPLOY_TO_SERVER.md  DEVELOPMENT.md  DIRECT_MODE_FIX.md  INSTALLATION.md  PORT_FIX.md  POST_DEPLOYMENT_GUIDE.md  PRODUCTION_CHECKLIST.md  QUICKSTART.md  QUICK_REFERENCE.md  README.md  SYSTEMD_SERVICE.md  TROUBLESHOOTING.md  UPDATE_GUIDE.md  UPDATE_VLESS.md  UPSTREAM_POOL_ARCHITECTURE.md  V1.2.0_COMPLETE.md  V1.2.0_QUICKSTART.md  V1.2.0_RELEASE_NOTES.md  V1.2.0_SUMMARY.md  V1.2.1_COMPLETE.md  V1.2.1_QUICKSTART.md  V1.2.1_RELEASE_NOTES.md  VLESS_CHANGELOG.md  VLESS_REALITY_DEBUG.md  VLESS_SUPPORT.md  WEB_VLESS_IMPORT.md
scripts/: check_singbox_config.sh  config_wizard.sh  debug_singbox_status.sh  deploy.sh  deploy_offline.sh  diagnose.sh  diagnose_proxy.sh  fix_deployment.sh  fix_port_issue.sh  fix_singbox.sh  generate_password_hash.py  init_default_config.sh  init_singbox_config.sh  install.sh  install_service.sh  migrate_reality_fields.sh  pack_offline.sh  production_test.sh  setup_dev_directories.sh  setup_directories.sh  setup_sudo_permissions.sh  test_auth.py  test_singbox_status.sh  test_sudo_permissions.sh  uninstall.sh  uninstall_service.sh  update_deployment.sh  update_v1.2.0.sh  (+1 more)
(+50 files in other folders)
